# api/photo/photoRouter.go
@@ -6,5 +6,8 @@ func Register(root *echo.Group, photoController PhotoController) {
 	photoRouter := root.Group("/photo")
 
 	photoRouter.POST("/upload", photoController.UploadPhoto)
-	photoRouter.GET("/list", photoController.GetPhotoList)
+	photoRouter.GET("", photoController.GetPhotoList)
+	photoRouter.GET("/group", photoController.GetPhotosGroup)
+	photoRouter.GET("/range", photoController.GetPhotoRange)
+	photoRouter.GET("/first", photoController.GetFirstPhoto)
 }
